# gispect

./: Cargo.toml  README.md  build.rs
src/: app.rs  config.rs  diff.rs  git.rs  highlight.rs  main.rs  mcp.rs  search.rs  search_ui.rs  types.rs  ui.rs  update.rs
