[package]
name = "gispect"
version = "0.1.0"
edition = "2021"
description = "TUI for inspecting git diffs side-by-side, with an MCP server and self-update"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
